bridge/base/redis-test-deployment.yaml
#! redis-test-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-test
    namespace: smart-performance-system
    labels:
        com.docker.compose.project: smart_performance_system
        com.docker.compose.service: redis-test
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: smart_performance_system
            com.docker.compose.service: redis-test
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: smart_performance_system
                com.docker.compose.service: redis-test
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: redis-test
                  image: redis:alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 5
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: redis-test-6379
                      containerPort: 6379
