bridge/base/postgres-test-expose.yaml
#! postgres-test-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-test
    namespace: smart-performance-system
    labels:
        com.docker.compose.project: smart_performance_system
        com.docker.compose.service: postgres-test
spec:
    selector:
        com.docker.compose.project: smart_performance_system
        com.docker.compose.service: postgres-test
    ports:
        - name: postgres-t-5432
          port: 5432
          targetPort: postgres-t-5432
