bridge/base/redis-test-expose.yaml
#! redis-test-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: redis-test
    namespace: smart-performance-system
    labels:
        com.docker.compose.project: smart_performance_system
        com.docker.compose.service: redis-test
spec:
    selector:
        com.docker.compose.project: smart_performance_system
        com.docker.compose.service: redis-test
    ports:
        - name: redis-test-6379
          port: 6379
          targetPort: redis-test-6379
